--- a/statsd.net/statsdnet.config
+++ b/statsd.net/statsdnet.config
@@ -7,6 +7,7 @@
         <gauges namespace="gauges" removeZeroGauges="true" />
         <counters namespace="counters" />
         <sets namespace="sets" />
+        <calendargrams namespace="calgrams" />
         <timers namespace="timers" calculateSumSquares="false">
             <percentile name="p90-5min" threshold="90" flushInterval="5m" />
             <percentile name="p90-1hour" threshold="90" flushInterval="1h" />
@@ -14,7 +15,7 @@
         </timers>
     </aggregation>
     <backends>
-        <statsdnet host="localhost" port="12001" flushInterval="5s" enableCompression="true"/>
+        <graphite host="graphite" port="2003" />
         <console />
     </backends>
 </statsdnet>
